service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: explore-california-deployment
  name: explore-california-service
  namespace: explore-california
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: explore-california-deployment
  type: NodePort
status: {}
