ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: explore-california-ingress
  namespace: explore-california
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /app(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: explore-california-service
            port:
              number: 80
